I gave up on chrome printing, it appears to be completely broken. I started fixing things on firefox, which starts to look good now. These fixes may also make the epub better.

--- a/css/prince.css
+++ b/css/prince.css
@@ -47,6 +47,15 @@ nav.index ul li a span, nav.index ul li a.author{
 	color: black !important;
 }
 
+section header{
+	height: 6.5in !important;
+	margin-bottom:0 !important;
+}
+
+section header h2.subtitle{
+	bottom:0 !important;
+}
+
 section header h2.title, section header h2.author, section header h2.subtitle{
 	color: white !important;
 }
