--- a/css/print.css
+++ b/css/print.css
@@ -1,21 +1,23 @@
-/* for this, we assume that people print on a4 */
-
+/* for this print stylesheet, we assume that most people print on a4 */
 
 body {
-  font-size: 10pt; /*will be used in the main content */
+  font-size: 12pt; 
 	font-weight:normal;
+	margin:30mm;
 }
-
 a{color: black !important;}
 
 .frontcover h1{
-	page-break-before: always !important;
 	font-size: 16pt !important;
+}
+
+.frontcover img{
+	page-break-after:always !important;
 }
 
 nav.index{
 	font-size: 10pt;
-	 /* trying to find a way to target different tags inside this div. issue: some css properties are changeable - for example, font-family and color - others are not - for example, font-size. (?!) */
+	/*  trying to find a way to target different tags inside this div. issue: some css properties are changeable - for example, font-family and color - others are not - for example, font-size. (?!) */
 }
 
 nav.index ul li a{
@@ -45,14 +47,18 @@ h2.title{
 	/* retrieves the content from h2.title - will be used later, in the page bottom*/
 }
 
+p{
+	/* margin-bottom doesnt work for some reason */
+	padding-bottom:1em !important;
+}
 .references{
 	string-set: doctitle '';
 	/* clears the page bottom text (otherwise, the title of the last essay will be displayed */
 } 
 
 section header{
-	height: 6.5in !important;
 	line-height: 2em;
+	margin-bottom:6em;
 	width: 100% !important;
 	position: relative;
 }
@@ -69,7 +75,7 @@ section header h2.title{
 	left: 0;
 }
 
-section header h2.author{;
+section header h2.author{
 	right: 0;
 	text-align: right;
 	width: 25% !important;
@@ -81,7 +87,8 @@ section header h2.subtitle{
 	position: absolute;
 	left: 0;
 	width: 100% !important;
-	bottom: 0;
+	font-weight:normal;
+	top:3.2em;
 }
 
 h1, h2, h3, h4, h5 {
@@ -94,7 +101,12 @@ p{
 	line-height: 1.1em !important;
 }
 
+.footnote-tooltip{
+	display:none !important;
+}
+
 div.footnotes{
+	display:block !important;
 	margin-top: 1cm;
 	column-count: 3;
 	column-width: 2.6cm;
